@@ -20,15 +20,6 @@ class action_plugin_fckg_delete extends DokuWiki_Action_Plugin {
     function action_plugin_fckg_delete(){
     }
 
-    function getInfo() {
-        return array(
-            'author' => 'Pierre Spring',
-            'email'  => 'pierre.spring@liip.ch',
-            'date'   => '2007-Mai-08',
-            'name'   => 'fckg_delete',
-            'desc'   => 'Delete Plugin for the Dokuwiki FCKW Plugin',
-            'url'    => 'https://fosswiki.liip.ch/display/FCKW/Home');
-    }
 
     function register(&$controller) {
         $controller->register_hook('DOKUWIKI_STARTED', 'BEFORE', $this, 'fckg_delete_preprocess');
